--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,11 +23,11 @@
 		"no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
 		"no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
 		"no-trailing-spaces": ["error"],
-		"no-var": "error",
+		"no-var": "warn",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
-		"quotes": ["error", "single"],
-		"semi": ["error", "always"],
+		"quotes": ["warn", "single"],
+		"semi": ["warn", "always"],
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", {
 			"anonymous": "never",
